<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_vertical|start"
    android:orientation="vertical">

    <TextView
        android:id="@+id/material_drawer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical|start"
        android:lines="1"
        android:singleLine="true"
        android:textDirection="anyRtl"
        tools:text="Some drawer text" />

    <TextView
        android:id="@+id/material_drawer_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical|start"
        android:lines="1"
        android:singleLine="true"
        android:textDirection="anyRtl"
        tools:text="Some drawer text" />
</LinearLayout>